--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
                         </div><!--//upper-row-->
                         <div class="company">Freelance, Barnaul</div>
 
-                        <p>Development of the project Internet store "Good Luck Shop" based on ASP.NET MVC5 Visual C # technology - see the 
-                            <a href="#Projects">"Projects" - Project Web Store "Good Luck Shop".</a></p>
+                        <p>Development of online store projects "Good Luck Shop" end "Astra Port" based on ASP.NET MVC5 Visual C # technology - see the
+                            <a href="#Projects">"Projects":<br> - Project Web Store "Good Luck Shop";<br> - Project Web Store "Astra Port".</a></p>
                         <p>For a list of my open source applications, see the "Projects" - 
                             <a href="#List_of_my_open_source_projects_:">"List of my open source projects" section.</a></p>
 
@@ -556,20 +556,19 @@
                     <div class="meta">
                         <div class="upper-row">
                             <div class="company">
-                                <h4>
+                                <h5>
                                     <a href="http://astra.somee.com/" target="_blank">Online project Web Store "Astra Port" (ASP.NET MVC5 Visual C#)</a>
-                                </h4>
+                                </h5>
                                 <div class="time">2023</div>
                             </div>
                         </div><!--//upper-row-->
-                        <div class="time">2023</div>
                         <br><br>
                     </div><!--//meta-->
 
 
                 <div class="meta">
                     <div class="upper-row">
-                        <h3 class="job-title">Offline project Web Store "Good Luck Shop" (ASP.NET MVC5 Visual C#):</h3>
+                        <h5 class="job-title">Offline project Web Store "Good Luck Shop" (ASP.NET MVC5 Visual C#):</h5>
                         <div class="time">2020</div>
                     </div><!--//upper-row-->
                 </div><!--//meta-->
