--- a/index — копия.html
+++ b/index — копия.html
@@ -166,7 +166,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="shares/images/profile.jpg" alt="profile"/>
+                <img class="profile" src="shares/images/profile_1.jpg" alt="profile"/>
                 <h1 class="name">Leonid N.<br>Stepanov</h1>
                 <h3 class="tagline">Frontend Developer</h3>
             </div>
