--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="shares/images/profile.jpg" alt="profile"/>
+                <img class="profile" src="shares/images/profile.png" alt="profile"/>
                 <h1 class="name">Leonid N.<br>Stepanov</h1>
                 <h3 class="tagline">Frontend Developer</h3>
             </div>
