--- a/index.html
+++ b/index.html
@@ -486,8 +486,16 @@
                         <div class="company">Freelance, Barnaul</div>
 
                         <p>Development of online store projects "Good Luck Shop" end "Astra Port" based on ASP.NET MVC5 Visual C # technology - see the
-                            <a href="#Projects">"Projects":<br> - Project Web Store "Good Luck Shop";<br> - Project Web Store "Astra Port".</a></p>
-                        <p>For a list of my open source applications, see the "Projects" - 
+                            <a href="#Projects">"Projects":
+                                <br> - Project Web Store "Good Luck Shop";
+                                <br> - Project Web Store "Astra Port";
+                                <br> - Project Web Site "Sirius Port".
+                            </a>
+                        </p>
+                        <p>For a list of my open source applications, see the "Projects" -
+
+
+
                             <a href="#List_of_my_open_source_projects_:">"List of my open source projects" section.</a></p>
 
                     </div><!--//meta-->
@@ -620,6 +628,71 @@
                 <p>7. Web Store - Sandbox PayPal.</p><br>
 
                 </div><!--//details-->
+
+
+
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h5 class="job-title">Offline site project "Sirius Port" based on "ASP.NET Core3 MVC5 Visual C#" technology:</h5>
+                            <div class="time">2023</div>
+                        </div><!--//upper-row-->
+                    </div><!--//meta-->
+
+                    <div class="details">
+                        <!-- <h5>Offline project Web Store "Good Luck Shop" (ASP.NET MVC5 Visual C#):</h5> -->
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/8 Site project structure Sirius Port.png" class="minimized" alt="page index">
+                        </div>
+                        <p>Site project structure "Sirius Port" based on "ASP.NET Core3 MVC5 Visual C#" technology.</p>
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/1 Input on admin panel.png" class="minimized" alt="page index">
+                        </div>
+                        <p>1. - Login to the built-in Sirius Port™ site admin panel.</p>
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/2 Admin panel.png" class="minimized" alt="page login">
+                        </div>
+                        <p>2. - View of the built-in administration panel of the site “Sirius Port ™”.</p>
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/3 Edit  pages of site.png" class="minimized" alt="Page Shop Category">
+                        </div>
+                        <p>3. - Editing the pages of the site “Sirius Port ™” through the built-in admin panel.</p>
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/4 Edit  elements of Assotiment.png" class="minimized" alt="Page Shop Product-details">
+                        </div>
+                        <p>4. - Editing the “range” elements of the “Sirius Port ™” site through the built-in admin panel.</p>
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/5 View of home page site Sirius Port.png" class="minimized" alt="User Cart-details">
+                        </div>
+                        <p>5. - View of the "main" page of the site "Sirius Port ™".</p>
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/6 View of  page ALMANAH site Sirius Port.png" class="minimized" alt="admin_panel">
+                        </div>
+                        <p>6. - View of the “almanac” page of the site “Sirius Port ™”.</p>
+                        <br>
+
+                        <div class="image__wrapper">
+                            <img src="shares/images/Sirius Port/7 View of  page CONTACTS  site Sirius Port.png" class="minimized" alt="Sandbox PayPal">
+                        </div>
+                        <p>7. - View of the page "contacts" of the site "Sirius Port ™".</p><br>
+
+                    </div><!--//details-->
+
+
+
 
                 <p><a id="List_of_my_open_source_projects_:"></a></p> 
                 <div class="intro">
