--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                         <div class="image__wrapper">
                             <img src="shares/images/Sirius Port/6 View of  page ALMANAH site Sirius Port.png" class="minimized" alt="admin_panel">
                         </div>
-                        <p>6. - View of the “almanac” page of the site “Sirius Port ™”.</p>
+                        <p>6. - View of the “Almanah” page of the site “Sirius Port ™”.</p>
                         <br>
 
                         <div class="image__wrapper">
