--- a/index.html
+++ b/index.html
@@ -475,7 +475,18 @@
                         <!-- </div> -->
 
                         <br>Development of automated software testing systems using "Postman", "SoapUI" and "Selenium" packages.<br>
-
+		         <br>
+                        <div class="meta">
+                            <div class="upper-row">
+                                <h3 class="job-title">Frontend Developer</h3>
+                                <div class="time">2021</div>
+                            </div><!--//upper-row-->
+                            <div class="company"><a> Udemy - Образовательная компания </a></div>
+                        </div><!--//meta-->
+                        <div class="image__wrapper">
+                            <img src="shares/images/UC-5bf816c0-3d57-4c6c-bac0-6d24da328d1a.jpg" class="minimized" alt="diplom-udemy">
+                        </div>
+			    
                     </div><!--//details-->
                 </div><!--//item-->
 
