HTML-тег noindex

--- a/wp/index_wp.html
+++ b/wp/index_wp.html
@@ -46,7 +46,7 @@
         </style>
         <!-- // стили скрипта для прелоадера в виде анимированной svg иконки  -->
 
-    <meta name="robots" content="noindex, nofollow">
+    <!-- <meta name="robots" content="noindex, nofollow"> -->
     <!-- <link rel="shortcut icon" href="favico.ico"> -->
     <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon">
     <link rel="alternate" type="application/rss+xml" title="сайт-визитка » Лента" href="http://localhost:88/wordpress/feed/">
