Update index.htm  lhttps://astra.somee.com

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: stepanow@bk.ru">stepanow@bk.ru</a></li>
                     <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:+7(___) ___ ____">+7(___) ___ ____</a></li> -->
-                    <li class="website"><i class="fa fa-globe"></i><a href="https://leonid-alt.github.io" target="_blank">leonid-stepanov.site</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="https://astra.somee.com" target="_blank">leonid-stepanov.site</a></li>
                     <!-- <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/leostep</a></li> -->
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/leonid-alt" target="_blank">github.com/leonid-alt</a></li> 
                     <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/_themes" target="_blank">@twittername</a></li> -->
