--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1665,7 +1665,7 @@
    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEuOj88D5Hi9bmOVK9f0lfTsSMEfvv9WA"></script>
  --> 
     <! --
-        <script type="text/javascript">
+       /* <script type="text/javascript">
             // When the window has finished loading create our google map below
             google.maps.event.addDomListener(window, 'load', init);
         
@@ -1698,7 +1698,7 @@
                     title: 'Altay Sense!'
                 });
             }
-        </script>
+        </script> */
     -->
  
     <script src="main.js"></script>
