--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -152,7 +152,7 @@
                             <li><a href="#port">PORTFOLIO</a></li>
                             <li><a href="#clients">CLIENTS</a></li>
                             <li><a href="#blog">BLOG</a></li>
-                            <li><a href="#map">LOCATION</a></li>
+                       <!-- <li><a href="#map">LOCATION</a></li> -->
                         </ul>
                     </nav>
                     
