--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -19,6 +19,8 @@
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="shares/css/styles.css">
 
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
     <title>Shop</title>
 </head>
 
