--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -19,7 +19,6 @@
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="shares/css/styles.css">
 
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
     <title>Shop</title>
 </head>
@@ -129,6 +128,9 @@
             </script>
         </div><!--//container-->
     </footer><!--//footer-->
+        
+     <!-- Javascript поддерживающий WebApps -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
     <!-- Javascript раскрытие меню в режиме "min"-->
     <script type="text/javascript" src="shares/plugins/jquery-1.11.3.min.js"></script>
