--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -5,105 +5,62 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Responsive HTML5 Resume for Frontend Developer">
+    <title>Happy shopping</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Monserrat:wght@200;500&display=swap')
 
-    <link rel="icon" href="https://leonid-alt.github.io/favicon.ico" type="image/x-icon">
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    <link href="https://fonts.googleapis.com/css?family=Rubik:regular,400,500,700,900&display=swap" rel="stylesheet" />
-    <!-- Собственные стили -->
-    <link rel="stylesheet" href="shares/css/styles.css">
-    <!-- Global CSS -->
-    <link rel="stylesheet" href="shares/plugins/bootstrap/css/bootstrap.min.css">
-    <!-- Plugins CSS -->
-    <link rel="stylesheet" href="shares/plugins/font-awesome/css/font-awesome.css">
-    <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="shares/css/styles.css">
+        body {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 200;
+            color: var(--tg-theme-text-color);
+            background: var(--tg-theme-bg-color);
+        }
 
+        #main {
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin-top: 50px;
+            margin-bottom: 10px;
+        }
+        img {
+            width:70px;
+            margin: 30px auto;
+        }
+        p {
+            width:350px;
+            margin: 0 auto;
+        }
+        botton {
+            border: 0;
+            border-radius: 5px;
+            margin-top: 50px;
+            height: 60px;
+            wight: 200px;
+            font-size: 20px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 500ms ease;
+            color: var(--tg-theme-button-color);
+            background: var(--tg-theme-secondary-bg-color);
+        }
+        button:hover {
+            background: var(--tg-theme-secondary-bg-color);
+        }
+    </style>
 
-    <title>Shop</title>
 </head>
 
 
     <body>
-    <!--   навигационного меню Navbar Bootstrap 3 -->
-    <div class="wrapper_menu">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main" aria-controls="navbar-main" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        <!-- &ensp; -->
-                        <i class="fa fa-info" aria-hidden="true"></i>
-                        <!-- &ensp; -->
-                    </button>
-                </a>
-            </div>
-
-
-            <!-- <i class="fa fa-info" aria-hidden="true"></i> -->
-            <div class="collapse navbar-collapse" id="navbar-main">
-                <ul class="nav navbar-nav">
-
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#Career_Profile">
-                            <i class="fa fa-user" aria-hidden="true"></i>
-                            CAREER<span class="sr-only">(current)</span></a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#Experiences">
-                            <i class="fa fa-briefcase" aria-hidden="true"></i>
-                            EXPERIENCES</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#Projects">
-                            <i class="fa fa-archive" aria-hidden="true"></i>
-                            PROJECTS</a>
-                    </li>
-                    <!--
-                            <li class="nav-item">
-                                <a class="nav-link" href="#Skills_&_Proficienc">
-                                  <i class="fa fa-rocket" aria-hidden="true"></i>
-                                  SKILLS</a>
-                              </li>
-                    -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="addition/index_addition.html" target="_blank">
-                            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                            ADD INFO</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="travel/index_travel.html" target="_blank">
-                            <i class="fa fa-binoculars" aria-hidden="true"></i>
-                            TRAVEL</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="food/index_food.html" target="_blank">
-                            <i class="fa fa-cutlery" aria-hidden="true"></i>
-                            FOOD</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="wp/index_wp.html" target="_blank">
-                            <i class="fa fa-wordpress" aria-hidden="true"></i>
-                            WordPress</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="shop/index_shop.html" target="_blank">
-                            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            SHOP</a>
-                    </li>
-
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <!--  // навигационного меню Navbar Bootstrap 3 -->
-    
     <div align="center">
     <h1>Онлайн магазин</h1>
     <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png">
@@ -128,14 +85,7 @@
             </script>
         </div><!--//container-->
     </footer><!--//footer-->
-        
-     <!-- Javascript поддерживающий WebApps -->
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-    <!-- Javascript раскрытие меню в режиме "min"-->
-    <script type="text/javascript" src="shares/plugins/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="shares/plugins/bootstrap/js/bootstrap.min.js"></script>
-
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
     </body>
 </div>
 </html>
