--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -81,7 +81,7 @@
     <h1>Онлайн магазин</h1>
     <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png">
     <p><h3>Мы продаем только качественные, востребованные товары</h3></p>
-    <botton id="buy"><h2>Купить</h2></botton>
+    <botton id="buy"><Купить</botton>
 
     <form id="form">
       <input type="text" placeholder="Имя" id="user_name">
