--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -79,7 +79,7 @@
 <body>
     <h1>Онлайн магазин</h1>
     <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png">
-    <p><Мы продаем только качественные, востребованные товары</p>
+    <p>Мы продаем только качественные, востребованные товары</p>
     <botton id="buy"><Купить</botton>
 
     <form id="form">
