--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -80,7 +80,7 @@
     <h1>Онлайн магазин</h1>
     <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png">
     <p>Мы продаем только качественные, востребованные товары</p>
-    <botton id="buy"><Купить</botton>
+    <botton id="buy">Купить</botton>
 
     <form id="form">
       <input type="text" placeholder="Имя" id="user_name">
