--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -21,7 +21,7 @@
             background: var(--tg-theme-bg-color);
         }
 
-        #main {
+        .main {
             width: 100%;
             padding: 20px;
             text-align: center;
@@ -55,7 +55,7 @@
             background: var(--tg-theme-secondary-bg-color);
         }
 
-        #form {
+        .form {
           display: none;
           text-align: center;
         }
