--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -55,7 +55,7 @@
             background: var(--tg-theme-secondary-bg-color);
         }
 
-        #form {
+        form {
           display: none;
           text-align: center;
         }
@@ -88,7 +88,7 @@
       <input type="text" placeholder="Имя" id="user_name">
       <input type="text" placeholder="Email" id="user_email">
       <input type="text" placeholder="Телефон" id="user_phone">
-      <botton id="order">Оформить покупку</botton>
+      <botton id="order">Оформить</botton>
     </form>
            
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
