--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -105,7 +105,7 @@
         });
 
         order.addEventListener("click", () => {
-            tg.close()
+            tg.close();
         });
     </script>   
 </body>
