--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -55,7 +55,7 @@
             background: var(--tg-theme-secondary-bg-color);
         }
 
-        form {
+        #form {
           display: none;
           text-align: center;
         }
