--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -105,6 +105,9 @@
         });
 
         order.addEventListener("click", () => {
+            let name = document.getElementById("user_name").value;
+            let email = document.getElementById("user_email").value;
+            let phone = document.getElementById("user_phone").value;
             tg.close();
         });
     </script>   
