--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -85,6 +85,7 @@
     </div>
 
     <form id="form">
+      <h1>Оформление покупки</h1>
       <input type="text" placeholder="Имя" id="user_name">
       <input type="text" placeholder="Email" id="user_email">
       <input type="text" placeholder="Телефон" id="user_phone">
