--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -38,7 +38,7 @@
             width:350px;
             margin: 0 auto;
         }
-        botton {
+        button {
             border: 0;
             border-radius: 5px;
             margin-top: 50px;
