--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -81,7 +81,7 @@
         <h1>Онлайн магазин</h1>
         <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png">
         <p>Мы продаем только качественные, востребованные товары</p>
-        <botton id="buy">Купить</botton>
+        <button id="buy">Купить</button>
     </div>
 
     <form id="form">
@@ -89,7 +89,7 @@
       <input type="text" placeholder="Имя" id="user_name">
       <input type="text" placeholder="Email" id="user_email">
       <input type="text" placeholder="Телефон" id="user_phone">
-      <botton id="order">Оформить</botton>
+      <button id="order">Оформить</button>
     </form>
            
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
