--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -19,6 +19,7 @@
             font-weight: 200;
             color: var(--tg-theme-text-color);
             background: var(--tg-theme-bg-color);
+            align-items: center;
         }
 
         #main {
