--- a/webstore/index_webstore.html
+++ b/webstore/index_webstore.html
@@ -8,6 +8,9 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script> <!--Подключаем скрипт от телеграм-->
 
     <style>
+        
+        @import url('https://fonts.googleapis.com/css2?family=Monserrat:wght@200;500&display=swap')
+        
         body{
             color: var(--tg-theme-text-color);
             background: var(--tg-theme-bg-color);
