--- a/webstore/index_webstore.html
+++ b/webstore/index_webstore.html
@@ -9,7 +9,7 @@
 
     <style>
         
-        @import url('https://fonts.googleapis.com/css2?family=Monserrat:wght@200;500&display=swap')
+        /* @import url('https://fonts.googleapis.com/css2?family=Monserrat:wght@200;500&display=swap') */
         
         body{
             color: var(--tg-theme-text-color);
