--- a/webstore/index_webstore.html
+++ b/webstore/index_webstore.html
@@ -19,6 +19,8 @@
         }
         
         body{
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 200;
             color: var(--tg-theme-text-color);
             background: var(--tg-theme-bg-color);
             display: flex;
