--- a/webstore/index_webstore.html
+++ b/webstore/index_webstore.html
@@ -26,7 +26,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            font-size: 18px;
+            font-size: 20px;
         }
 
         .hint{
@@ -57,7 +57,7 @@
 <body>
 <div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
 </div>
-<p>Just text</p> <!--Просто текст для проверки-->
+<p><h2>Just text</h2></p> <!--Просто текст для проверки-->
 <a class="link" href="https://leonid-alt.github.io/shop/index_shop.html">Link</a> <!--Просто ссылка для проверки-->
 <p class="hint">Some little hint</p> <!--Просто текст-подсказка для проверки-->
 <button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
