--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -97,6 +97,7 @@
       <input type="text" placeholder="Имя" id="user_name">
       <input type="text" placeholder="Email" id="user_email">
       <input type="text" placeholder="Телефон" id="user_phone">
+      <div id="error"></div>
       <button id="order">Оформить</button>
     </form>
 
@@ -114,9 +115,26 @@
         });
 
         order.addEventListener("click", () => {
+            document.getElementById("error").innerText = '';
             let name = document.getElementById("user_name").value;
             let email = document.getElementById("user_email").value;
             let phone = document.getElementById("user_phone").value;
+            if(name.length > 5) {
+                document.getElementById("error").innerText = 'Ошибка имени';
+                return;
+            }
+            if(email.length > 5) {
+                document.getElementById("error").innerText = 'Ошибка в email';
+                return;
+            }
+            if(phone.length > 5) {
+                document.getElementById("error").innerText = 'Ошибка в номере телефона';
+                return;
+            }
+
+
+
+            
             tg.close();
         });
     </script>   
