--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -132,8 +132,12 @@
                 return;
             }
 
-
-
+            let data = {
+                name: name;
+                email: email;
+                phone: phone
+            }
+            tg.sendData(JSON.stringify(data));
             
             tg.close();
         });
