--- a/shop/index_shop.html
+++ b/shop/index_shop.html
@@ -115,7 +115,7 @@
 
         order.addEventListener("click", () => {
 
-             document.getElementById("error").innerText = ''; //если мы заново нажимаем на кнопку, то убираем текст ошибки и заново проверяем текст в полях ввода
+             //document.getElementById("error").innerText = ''; //если мы заново нажимаем на кнопку, то убираем текст ошибки и заново проверяем текст в полях ввода
             
             let name = document.getElementById("user_name").value;
             let email = document.getElementById("user_email").value;
