--- a/index.html
+++ b/index.html
@@ -369,6 +369,10 @@
                     <li>Fishing</li>
                     <video muted="muted" controls="controls" src="shares/video/katun.mp4">
                     </video><br><br>
+
+		    <li>Music</li>
+                    <video muted="muted" controls="controls" src="shares/video/Cartoon_FK.mp3">
+                    </video><br><br>
                     <!-- <li>Hang Gliding</li> -->
 
                 </ul>
