--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 		    <li>Music</li>
                     <video muted="muted" controls="controls" src="shares/video/Cartoon_FK.mp3">
-                    </video><br><br>
+                    </video>
                     <!-- <li>Hang Gliding</li> -->
 
                 </ul>
