--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     <video muted="muted" controls="controls" src="shares/video/katun.mp4">
                     </video><br><br>
 
-		    <li>Music Artificial Intelligence</li>
+		    <li>Artificial Intelligence Music</li>
                     <video muted="muted" controls="controls" src="shares/video/Cartoon_M.mp3">
                     </video>
                     <!-- <li>Hang Gliding</li> -->
