--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                 
                 <div class="contact-info">
                     <p>По вопросам обращайтесь:</p>
-                    <p>support@example.com | +7 (123) 456-78-90</p>
+                    <p>stepanow@bk.ru</p>
                 </div>
             </div>
             
