--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 
                 <div class="contact-info">
                     <p>For inquiries, please contact:</p>
-                    <p>support@example.com | +7 (123) 456-78-90</p>
+                    <p>stepanow@bk.ru</p>
                 </div>
             </div>
         </div>
