--- a/index.html
+++ b/index.html
@@ -230,8 +230,15 @@
               <i class="fa fa-rocket" aria-hidden="true"></i>
               SKILLS</a>
           </li>
-          <li class="nav-item">
+		  
+          <!-- <li class="nav-item">
               <a class="nav-link" href="addition/index_addition.html" target="_blank">
+                  <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                  ADD INFO</a>
+          </li>  -->
+
+		  <li class="nav-item">
+              <a class="nav-link" href="portfolio/index_portfolio.html" target="_blank">
                   <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                   ADD INFO</a>
           </li>
