--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -55,7 +55,7 @@
         </header-nav>
         <div class="container">
             <div class="header-row">
-                <img src="./img/_photo.jpg" srcset="./img/_photo@2x.jpg 2x" alt="Photo" class="header-img">
+                <img src="./img/_photo.jpg" srcset="./img/_photo.jpg 2x" alt="Photo" class="header-img">
                 <div class="header-desc">
                     <h1 class="header-title">Леонид Степанов</h1>
                     <p class="header-text">фрилансер, веб-разработчик,<br> создание сайтов</p>
@@ -141,5 +141,6 @@
     <!--  скрипт  для прокрутки страницы вверх -->
     <script src="js/scrollup.js"></script>
 </body>
+
 
 </html>
