--- a/portfolio/gotravel.html
+++ b/portfolio/gotravel.html
@@ -47,7 +47,7 @@
 
             <img class="inner-page-img" src="./img/projets/project-go-travel.jpg"
                 srcset="./img/projets/project-go-travel@2x.jpg 2x" alt="Сайт туристического агентства">
-            <a href="./index.html" class="inner-page-backlink">
+            <a href="./index_portfolio.html" class="inner-page-backlink">
                 <img src="./img/icons/arrow-left.svg" alt="Назад на главную">
                 Назад на главную
             </a>
@@ -57,5 +57,6 @@
     <!--  скрипт  для прокрутки страницы вверх -->
     <script src="js/scrollup.js"></script>
 </body>
+
 
 </html>
