--- a/portfolio/panto.html
+++ b/portfolio/panto.html
@@ -48,7 +48,7 @@
 
             <img class="inner-page-img" src="./img/projets/project-panto-full.jpg"
                 srcset="./img/projets/project-panto-full@2x.jpg 2x" alt="Сайт магазина мебели">
-            <a href="./index.html" class="inner-page-backlink">
+            <a href="./index_portfolio.html" class="inner-page-backlink">
                 <img src="./img/icons/arrow-left.svg" alt="Назад на главную">
                 Назад на главную
             </a>
@@ -58,5 +58,6 @@
     <!--  скрипт  для прокрутки страницы вверх -->
     <script src="js/scrollup.js"></script>
 </body>
+
 
 </html>
