--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -55,7 +55,7 @@
         </header-nav>
         <div class="container">
             <div class="header-row">
-                <img src="./img/_photo.jpg" srcset="./img/_photo.jpg" alt="Photo" class="header-img">
+                <img src="./img/_photo.jpg" srcset="./img/photo.jpg" alt="Photo" class="header-img">
                 <div class="header-desc">
                     <h1 class="header-title">Леонид Степанов</h1>
                     <p class="header-text">фрилансер, веб-разработчик,<br> создание сайтов</p>
@@ -144,5 +144,6 @@
 
 
 </html>
+
 
 
