--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -38,7 +38,7 @@
                     <img src="./img/favicons/favicon.ico" alt="QR-логотип">
                 </div>
 
-                <a class="nav-link" href="./bannerportfolio/index_bannerportfolio.html">BannerPortfolio</a>
+                <a class="nav-link" href="../bannerportfolio/index_bannerportfolio.html">BannerPortfolio</a>
                 <a class="nav-link" href="#">Возможности</a>
                 <a class="nav-link" href="#">Стоимость</a>
                 <a class="nav-link" href="#">Блог</a>
@@ -144,6 +144,7 @@
 
 
 </html>
+
 
 
 
