--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <a class="nav-link" href="../bannerportfolio/index_bannerportfolio.html" target="_blank">BannerPortfolio</a>
-                <a class="nav-link" href="#">Возможности</a>
+                <a class="nav-link" href="../addition/index_addition.html" target="_blank">Возможности</a>
                 <a class="nav-link" href="#">Стоимость</a>
                 <a class="nav-link" href="#">Блог</a>
                 <a class="nav-link" href="#">Контакты</a>
@@ -144,6 +144,7 @@
 
 
 </html>
+
 
 
 
