--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -131,7 +131,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-inner">
-                <p>© Леонид Степанов <br>HTML верстальщик, создание сайтов Барнаул</p>
+                <p>© Леонид Степанов <br>HTML верстальщик, создание сайтов</p>
                 <p><a href="https://leonid-alt.github.io/index_2.html" target="_blank">💻 Макет сверстан в VS Code +
                         Figma + Google
                         Chrome</a></p>
@@ -144,6 +144,7 @@
 
 
 </html>
+
 
 
 
