--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="../addition/index_addition.html" target="_blank">Возможности</a>
                 <a class="nav-link" href="#">Стоимость</a>
                 <a class="nav-link" href="#">Блог</a>
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link" href="#contacts">Контакты</a>
             </div>
             <div class="flags-link">
                 <a class="flags-link-img" href="#">ru <img src="./img/flags/ru_30_20.svg" alt="русский язык">
@@ -144,6 +144,7 @@
 
 
 </html>
+
 
 
 
