--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -81,7 +81,7 @@
                     <li><a href="#contact">Контакты &nbsp</a>
                         <ul class="submenu">
                             <li><a href="#">&nbsp</a></li><Br>
-                            <li><a href="https://leonid-alt.github.io/index_1.html" target="_blank">Leonid N.
+                            <li><a href="https://leonid-alt.github.io/index.html" target="_blank">Leonid N.
                                     Stepanov</a></li>
                         </ul>
                     </li>
@@ -482,5 +482,6 @@
     </div>
 
 </body>
+
 
 </html>
