--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -117,8 +117,10 @@
                     </div>
                     <span class="parallax-layer parallax-text">Сад изящных слов</span>
                 </div>
-
-                <p>Баннер на CSS с 3D трансформациями и параллакс эффектом при наведении</p>
+                <p>
+                <a href="https://leonid-alt.github.io/food/index_food.html" target="_blank">Баннер на CSS с 3D трансформациями и параллакс эффектом при наведении</a>
+                </p>
+                <!-- <p>Баннер на CSS с 3D трансформациями и параллакс эффектом при наведении</p> -->
             </div>
 
             <!-- Баннер 2: Продуктовый -->
@@ -485,3 +487,4 @@
 
 
 </html>
+
