--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -118,7 +118,10 @@
                     <span class="parallax-layer parallax-text">Сад изящных слов</span>
                 </div>
                 <p>
-                <a href="https://leonid-alt.github.io/food/index_food.html" target="_blank">Баннер на CSS с 3D трансформациями и параллакс эффектом при наведении</a>
+                    <span class="item-size"><a class="nav-link" href="https://leonid-alt.github.io/food/index_food.html"
+                            target="_blank">Баннер на CSS с 3D трансформациями и
+                            параллакс эффектом при наведении</a>
+                    </span>
                 </p>
                 <!-- <p>Баннер на CSS с 3D трансформациями и параллакс эффектом при наведении</p> -->
             </div>
@@ -487,4 +490,5 @@
 
 
 </html>
+
 
