--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -132,6 +132,10 @@
         <div class="container">
             <div class="footer-inner">
                 <p>© Леонид Степанов <br>HTML верстальщик, создание сайтов</p>
+                
+                <!--  скрипт  календаря -->
+            <script src="./js/calendar.js"></script>
+                
                 <p><a href="https://leonid-alt.github.io/index_2.html" target="_blank">💻 Макет сверстан в VS Code +
                         Figma + Google
                         Chrome</a></p>
@@ -144,6 +148,7 @@
 
 
 </html>
+
 
 
 
