--- a/index.html
+++ b/index.html
@@ -817,8 +817,8 @@
                 var month = new Array("января", "февраля", "марта", "апреля", "мая", "июня",
                     "июля", "августа", "сентября", "октября", "ноября", "декабря");
 
-                document.write(day[d.getDay()] + " " + d.getDate() + " " + month[d.getMonth()]
-                    + " " + d.getFullYear() + " г.");
+				document.write(day[d.getDay()] + ", " + d.getDate() + " " + month[d.getMonth()]
+                    + ", " + d.getFullYear() + " г.");
             </script>
         </div><!--//container-->
     </footer><!--//footer-->
