--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -161,6 +161,10 @@
                 <div class="col-4">
                     <p class="footer__name">© Леонид Степанов</p>
                     <p>HTML верстка и разработка сайтов</p>
+                    <p>
+                        <!--  скрипт  календаря -->
+                        <script src="./js/calendar.js"></script>
+                    </p>
                 </div>
 
                 <div class="col-4">
