--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -118,7 +118,7 @@
                         <img src="./img/icons/whatsapp.svg" alt="WhatsApp">
                         Отправить в WhatsApp
                     </a>
-                    <a href="#https://vk.me/youraccauntname" target="_blank" class="messanger">
+                    <a href="https://vk.com/id797517622" target="_blank" class="messanger">
                         <img src="./img/icons/vk.svg" alt="Вконтакте">
                         Связаться Вконтакте
                     </a>
@@ -148,6 +148,7 @@
 
 
 </html>
+
 
 
 
