--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -110,7 +110,7 @@
                 <h2 class="contacts-title">Контакты</h2>
 
                 <div class="messangers">
-                    <a href="#https://t.me/leonid_alt_ru" target="_blank" class="messanger">
+                    <a href="https://t.me/@leonid_alt_ru" target="_blank" class="messanger">
                         <img src="./img/icons/telegram.svg" alt="Telegram">
                         Написать в Telegram
                     </a>
@@ -148,6 +148,7 @@
 
 
 </html>
+
 
 
 
