--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -466,10 +466,10 @@
             <div class="logo" style="font-size: 2rem; margin-bottom: 20px;">BannerPortfolio</div>
             <p>Создание современных веб-баннеров и интерфейсов</p>
             <div class="social-links">
-                <a href="#"><i class="fab fa-behance"></i></a>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
+                <a href="#"><i class="fab fa-telegram"></i></a>
+                <a href="#"><i class="fab fa-vk"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <!-- <a href="#"><i class="fab fa-linkedin"></i></a> -->
             </div>
             <!--  скрипт  календаря -->
             <script src="./js/calendar.js"></script>
@@ -490,5 +490,6 @@
 
 
 </html>
+
 
 
