--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -466,8 +466,8 @@
             <div class="logo" style="font-size: 2rem; margin-bottom: 20px;">BannerPortfolio</div>
             <p>Создание современных веб-баннеров и интерфейсов</p>
             <div class="social-links">
-                <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fab fa-vk"></i></a>
+                <a href="https://t.me/leonid_alt_ru"><i class="fab fa-telegram"></i></a>
+                <a href="https://vk.com/id797517622"><i class="fab fa-vk"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
                 <!-- <a href="#"><i class="fab fa-linkedin"></i></a> -->
             </div>
@@ -490,6 +490,7 @@
 
 
 </html>
+
 
 
 
