--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -114,8 +114,8 @@
                         <img src="./img/icons/telegram.svg" alt="Telegram">
                         Написать в Telegram
                     </a>
-                    <a href="#https://wa.me/79051234567" target="_blank" class="messanger">
-                        <img src="./img/icons/whatsapp.svg" alt="WhatsApp">
+                    <a href="https://github.com/leonid-alt" target="_blank" class="messanger">
+                        <img src="./img/icons/vk.svg" alt="WhatsApp">
                         Отправить в WhatsApp
                     </a>
                     <a href="https://vk.com/id797517622" target="_blank" class="messanger">
@@ -148,6 +148,7 @@
 
 
 </html>
+
 
 
 
