--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -116,7 +116,7 @@
                     </a>
                     <a href="https://github.com/leonid-alt" target="_blank" class="messanger">
                         <img src="./img/icons/icons60x60github.svg" alt="GitHub">
-                        Отправить в WhatsApp
+                        Смотреть в Github
                     </a>
                     <a href="https://vk.com/id797517622" target="_blank" class="messanger">
                         <img src="./img/icons/vk.svg" alt="Вконтакте">
@@ -148,6 +148,7 @@
 
 
 </html>
+
 
 
 
