--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -115,7 +115,7 @@
                         Написать в Telegram
                     </a>
                     <a href="https://github.com/leonid-alt" target="_blank" class="messanger">
-                        <img src="./img/icons/github.svg" alt="GitHub">
+                        <img src="./img/icons/icons60x60github.svg" alt="GitHub">
                         Смотреть в Github
                     </a>
                     <a href="https://vk.com/id797517622" target="_blank" class="messanger">
