--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -107,9 +107,10 @@
 
         <section class="contacts" id="contacts">
             <div class="container">
-                <h2 class="contacts-title">Контакты</h2>
+                <h3 class="contacts-title">Контакты</h3>
 
                 <div class="messangers">
+                    <style>z-index: 2; /* Выше */</style>
                     <a href="https://t.me/leonid_alt_ru" target="_blank" class="messanger">
                         <img src="./img/icons/telegram.svg" alt="Telegram">
                         Написать в Telegram
@@ -148,6 +149,7 @@
 
 
 </html>
+
 
 
 
