--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -110,13 +110,13 @@
                 <h3 class="contacts-title">Контакты</h3>
 
                 <div class="messangers">
-                    <style>z-index: 2; /* Выше */</style>
+                    
                     <a href="https://t.me/leonid_alt_ru" target="_blank" class="messanger">
                         <img src="./img/icons/telegram.svg" alt="Telegram">
                         Написать в Telegram
                     </a>
                     <a href="https://github.com/leonid-alt" target="_blank" class="messanger">
-                        <img src="./img/icons/icons60x60github.svg" alt="GitHub">
+                        <img src="./img/icons/github.png" alt="GitHub">
                         Смотреть в Github
                     </a>
                     <a href="https://vk.com/id797517622" target="_blank" class="messanger">
@@ -149,6 +149,7 @@
 
 
 </html>
+
 
 
 
