--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -115,8 +115,13 @@
                         <img src="./img/icons/telegram.svg" alt="Telegram">
                         Написать в Telegram
                     </a>
-                    <a href="https://github.com/leonid-alt" target="_blank" class="messanger">
+                    <!-- <a href="https://github.com/leonid-alt" target="_blank" class="messanger"> 
                         <img src="./img/icons/github.png" alt="GitHub">
+                        Смотреть в Github
+                    </a> -->
+
+                    <a href="https://github.com/leonid-alt" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true"></i>
                         Смотреть в Github
                     </a>
                     <a href="https://vk.com/id797517622" target="_blank" class="messanger">
@@ -149,6 +154,7 @@
 
 
 </html>
+
 
 
 
