--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -115,15 +115,16 @@
                         <img src="./img/icons/telegram.svg" alt="Telegram">
                         Написать в Telegram
                     </a>
-                    <!-- <a href="https://github.com/leonid-alt" target="_blank" class="messanger"> 
-                        <img src="./img/icons/github.png" alt="GitHub">
+                    <a href="https://github.com/leonid-alt" target="_blank" class="messanger"> 
+                        <img src="./img/icons/github2.png" alt="GitHub">
                         Смотреть в Github
-                    </a> -->
+                    </a> 
 
-                    <a href="https://github.com/leonid-alt" target="_blank">
+                    <!--  <a href="https://github.com/leonid-alt" target="_blank">
                         <i class="fa fa-github" aria-hidden="true"></i>
                         Смотреть в Github
-                    </a>
+                    </a> -->
+                    
                     <a href="https://vk.com/id797517622" target="_blank" class="messanger">
                         <img src="./img/icons/vk.svg" alt="Вконтакте">
                         Связаться Вконтакте
@@ -154,6 +155,7 @@
 
 
 </html>
+
 
 
 
