--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -116,7 +116,7 @@
                         Написать в Telegram
                     </a>
                     <a href="https://github.com/leonid-alt" target="_blank" class="messanger"> 
-                        <img src="./img/icons/github2.png" alt="GitHub">
+                        <img src="./img/icons/github.png" alt="GitHub">
                         Смотреть в Github
                     </a> 
 
@@ -155,6 +155,7 @@
 
 
 </html>
+
 
 
 
