--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -122,7 +122,7 @@
 
                     <!--  <a href="https://github.com/leonid-alt" target="_blank">
                         <i class="fa fa-github" aria-hidden="true"></i>
-                        Смотреть в Github
+                        Смотреть в GitHub
                     </a> -->
                     
                     <a href="https://vk.com/id797517622" target="_blank" class="messanger">
@@ -155,6 +155,7 @@
 
 
 </html>
+
 
 
 
