--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -468,7 +468,7 @@
             <div class="social-links">
                 <a href="https://t.me/leonid_alt_ru"><i class="fab fa-telegram"></i></a>
                 <a href="https://vk.com/id797517622"><i class="fab fa-vk"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://leonid-alt.github.io"><i class="fab fa-github"></i></a>
                 <!-- <a href="#"><i class="fab fa-linkedin"></i></a> -->
             </div>
             <!--  скрипт  календаря -->
@@ -490,6 +490,7 @@
 
 
 </html>
+
 
 
 
