--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -256,7 +256,7 @@
                         <i class="fa fa-github" aria-hidden="true"></i>
                         </a>
 
-                        <a href="#" target="_blank">
+                        <a href="https://vk.com/id797517622" target="_blank">
                         <i class="fa fa-vk" aria-hidden="true"></i>
                         </a>
 
