--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -260,9 +260,15 @@
                         <i class="fa fa-vk" aria-hidden="true"></i>
                         </a>
 
+                        <a href="https://github.com/leonid-alt" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                        
+                        <!--
                         <a href="#" target="_blank">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
+                        -->
 
                         <a href="#" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
