--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -252,7 +252,7 @@
                 <div class="col-4">
                     <p class="footer__social">Мои профили в социальных сетях:</p>
                     <p class="footer__social-icons">
-                        <a href="https://github.com/leonid-alt"  target="_blank">
+                        <a href="https://t.me/leonid_alt_ru"  target="_blank">
                         <i class="fa fa-github" aria-hidden="true"></i>
                         </a>
 
