--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -253,7 +253,7 @@
                     <p class="footer__social">Мои профили в социальных сетях:</p>
                     <p class="footer__social-icons">
                         <a href="https://t.me/leonid_alt_ru"  target="_blank">
-                        <i class="fa fa-github" aria-hidden="true"></i>
+                        <i class="fa fa-telegram" aria-hidden="true"></i>
                         </a>
 
                         <a href="https://vk.com/id797517622" target="_blank">
