--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -117,7 +117,7 @@
                     </a>
                     <a href="https://github.com/leonid-alt" target="_blank" class="messanger"> 
                         <img src="./img/icons/github.png" alt="GitHub">
-                        Смотреть в GitHub
+                        Смотреть на GitHub
                     </a> 
 
                     <!--  <a href="https://github.com/leonid-alt" target="_blank">
@@ -155,3 +155,4 @@
 
 
 </html>
+
