--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -35,6 +35,8 @@
         <header-nav class="header-nav">
             <div class="header-container-nav">
                 <div class="logo">
+                    <a class="logo" href="https://leonid-alt.github.io/index.html">ru <img src="./img/favicons/favicon.ico" alt="QR-логотип">
+                </a>
                     <img src="./img/favicons/favicon.ico" alt="QR-логотип">
                 </div>
 
@@ -155,4 +157,5 @@
 
 
 </html>
+
 
