--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -35,9 +35,8 @@
         <header-nav class="header-nav">
             <div class="header-container-nav">
                 <div class="logo">
-                    <a class="logo" href="https://leonid-alt.github.io/index.html">ru <img src="./img/favicons/favicon.ico" alt="QR-логотип">
-                </a>
-                    <img src="./img/favicons/favicon.ico" alt="QR-логотип">
+                    <a class="logo" href="https://leonid-alt.github.io/index.html">ru <img src="./img/favicons/icon180.png" alt="QR-логотип">
+                    </a>
                 </div>
 
                 <a class="nav-link" href="../bannerportfolio/index_bannerportfolio.html" target="_blank">BannerPortfolio</a>
@@ -157,5 +156,6 @@
 
 
 </html>
+
 
 
