--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -35,7 +35,7 @@
         <header-nav class="header-nav">
             <div class="header-container-nav">
                 <div class="logo">
-                    <a class="logo" href="https://leonid-alt.github.io/index.html">ru <img src="./img/favicons/favicon.ico" alt="QR-логотип">
+                    <a class="logo" href="https://leonid-alt.github.io/index.html" target="_blank">ru <img src="./img/favicons/favicon.ico" alt="QR-логотип">
                     </a>
                 </div>
 
@@ -156,6 +156,7 @@
 
 
 </html>
+
 
 
 
