--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -35,8 +35,14 @@
         <header-nav class="header-nav">
             <div class="header-container-nav">
                 <div class="logo">
-                    <a class="logo" href="https://leonid-alt.github.io/index.html" target="_blank">ru <img src="./img/favicons/favicon.ico" alt="QR-логотип">
+                    <a class="logo" href="https://leonid-alt.github.io/index.html">ru <img src="./img/favicons/favicon.ico" alt="QR-логотип">
                     </a>
+                    <button onclick="goBack()">logo</button>
+                        <script>
+                            function goBack() {
+                            window.history.back();
+                            }
+                        </script>
                 </div>
 
                 <a class="nav-link" href="../bannerportfolio/index_bannerportfolio.html" target="_blank">BannerPortfolio</a>
@@ -156,6 +162,7 @@
 
 
 </html>
+
 
 
 
