--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -37,7 +37,7 @@
                 <div class="logo">
                     <a class="logo" href="https://leonid-alt.github.io/index.html">ru <img src="./img/favicons/favicon.ico" alt="QR-логотип">
                     </a>
-                    <button onclick="goBack()">logo</button>
+                    <button onclick="goBack()">"./img/favicons/favicon.ico"</button>
                         <script>
                             function goBack() {
                             window.history.back();
@@ -162,6 +162,7 @@
 
 
 </html>
+
 
 
 
