--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="portfolio-item__img">   
                         <p><a href="app_development.html">
-                            <img src="img/portfolio/iPhone 7.jpg" alt="Apple iOS7 Development"></a>
+                            <class="portfolio_img" img src="img/portfolio/iPhone 7.jpg" alt="Apple iOS7 Development"></a>
                         </a></p>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                     </div>
                     <div class="portfolio-item__img">
                         <p><a href="certificats.html">
-                            <img src="img/portfolio/Docicon_360.jpg" alt="IT - Сертификаты"></a>
+                            <class="portfolio_img" img src="img/portfolio/Docicon_360.jpg" alt="IT - Сертификаты"></a>
                         </a></p>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="portfolio-item__img">
                         <p><a href="3D_modeling.html">
-                            <img src="img/portfolio/comicon_360.jpg" alt="3D моделирование"></a>
+                            <class="portfolio_img" img src="img/portfolio/comicon_360.jpg" alt="3D моделирование"></a>
                         </a></p>
                     </div>
                 </div>
